[project]
name = "project"
version = "0.1.0"
description = ""
authors = [
    {name = "brian-223134",email = "kimchanjoong54@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.2,<7.0.0)",
    "gunicorn (>=21.2.0,<22.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]

[tool.poetry]
packages = [{include = "project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
